--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,9 @@ services:
     name: alpha_blog1
     runtime: ruby
     plan: free
-    buildCommand: "./bin/render-build.sh"
+    buildCommand: |
+      ./bin/render-build.sh
+      bundle exec rails db:migrate
     # preDeployCommand: "bundle exec rails db:migrate" # preDeployCommand only available on paid instance types
     startCommand: "bundle exec rails server"
     envVars:
